helm/persistent-resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-component-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: canary.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary-component-svc
                port:
                  number: 8888
